<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="25dp"
    tools:context=".LogInFragment">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogIn" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/roboto"
        android:text="@string/log_in_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>